--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <main>
-        <form id="Login">
+        <form id="Login" action="https://formsubmit.co/mohitkumar143680@gmail.com" method="post">
             <header>
                 <h4>Login here using your username and paasword</h4>
             </header>
@@ -27,7 +27,7 @@
                 Don't have account   <a onclick="swithMode()" href="#">Sign Up</a>
             </p>
         </form>
-        <form id="Signup">
+        <form id="Signup" action="https://formsubmit.co/mohitkumar143680@gmail.com" method="post">
             <header>
                 <h4>Signup here using your details</details></h4>
             </header>
