--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
             <button type="submit">Login</button>
             <p class="footer">
-                Don't have account   <a onclick="swithMode()" href="#">Sign Up</a>
+                Don't have account   <a href="#">Sign Up</a>
             </p>
         </form>
         <form id="Signup" action="https://formsubmit.co/mohitkumar143680@gmail.com" method="post">
@@ -49,7 +49,7 @@
             </div>
             <button type="submit">Sign Up</button>
             <p class="footer">
-                Already have account   <a onclick="swithMode()" href="#">Login</a>
+                Already have account   <a href="#">Login</a>
             </p>
         </form>
     </main>
