--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </div>
             <div class="login remember">
                 <input id="check" type="checkbox">
-                <label for="check">Remember Me</label>
+                <label for="check">Remember Me <a class="mp" href="#">Forgot Password</a></label>
             </div>
             <button type="submit">Login</button>
             <p class="footer">
@@ -49,7 +49,7 @@
             </div>
             <button type="submit">Sign Up</button>
             <p class="footer">
-                Already have account   <a href="#">Login</a>
+                Already have an account   <a href="#">Login</a>
             </p>
         </form>
     </main>
