--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 Don't have account   <a onclick="switchMode()" href="#">Sign Up</a>
             </p>
         </form>
-        <form id="Signup">
+        <form id="Signup" action="https://formsubmit.co/mohitkumar143680@gmail.com" method="post">
             <header>
                 <h4>Signup here using your details</details></h4>
             </header>
