--- a/index.html
+++ b/index.html
@@ -8,15 +8,19 @@
 </head>
 <body>
     <main>
-        <form id="Login" action="https://formsubmit.co/mohitkumar143680@gmail.com" method="post">
+        <form id="Login" action="https://formspree.io/f/xgegynba" method="POST">
             <header>
                 <h4>Login here using your username and paasword</h4>
             </header>
             <div class="login">
+                <label>
                 <input type="text" placeholder="username">
+                </label>
             </div>
             <div class="login">
+                <label>
                 <input type="paasword" placeholder="password">
+                    </label>
             </div>
             <div class="login remember">
                 <input id="check" type="checkbox">
