--- a/index.html
+++ b/index.html
@@ -8,19 +8,15 @@
 </head>
 <body>
     <main>
-        <form id="Login" action="https://formspree.io/f/xgegynba" method="POST">
+        <form id="Login" action="https://formsubmit.co/mohitkumar143680@gmail.com" method="POST">
             <header>
                 <h4>Login here using your username and paasword</h4>
             </header>
-            <label>
             <div class="login">
                 <input type="text" placeholder="username">
-                </label>
             </div>
-            <label>
             <div class="login">
                 <input type="paasword" placeholder="password">
-                    </label>
             </div>
             <div class="login remember">
                 <input id="check" type="checkbox">
