--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
             <button type="submit">Login</button>
             <p class="footer">
-                Don't have account   <a onclick="switchMode()" href="#">Sign Up</a>
+                Don't have account   <a onclick="mohitSingh()" href="#">Sign Up</a>
             </p>
         </form>
         <form id="Signup" action="https://formsubmit.co/mohitkumar143680@gmail.com" method="post">
@@ -49,12 +49,12 @@
             </div>
             <button type="submit">Sign Up</button>
             <p class="footer">
-                Already have account   <a onclick="switchMode()" href="#">Login</a>
+                Already have account   <a onclick="mohitSingh()" href="#">Login</a>
             </p>
         </form>
     </main>
     <script>
-        function switchMode(){
+        function mohitSingh(){
         document.body.classList.toggle("active");
     }
     </script>
