--- a/index.html
+++ b/index.html
@@ -53,10 +53,6 @@
             </p>
         </form>
     </main>
-    <script>
-        function mohitSingh(){
-        document.body.classList.toggle("active");
-    }
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
