--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
             <button type="submit">Login</button>
             <p class="footer">
-                Don't have account   <a onclick="mohitSingh()" href="#">Sign Up</a>
+                Don't have account&#63;  <a onclick="mohitSingh()" href="#">Sign Up</a>
             </p>
         </form>
         <form id="Signup" action="https://formsubmit.co/mohitkumar143680@gmail.com" method="post">
