--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </div>
             <button type="submit">Sign Up</button>
             <p class="footer">
-                Already have account   <a onclick="mohitSingh()" href="#">Login</a>
+                Already have account.  <a onclick="mohitSingh()" href="#">Login</a>
             </p>
         </form>
     </main>
