--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
             <div class="signup remember">
                 <input id="check" type="checkbox">
-                <label for="check">I agree to term & conditions</label>
+                <label for="check">I agree to term & conditions. </label>
             </div>
             <button type="submit">Sign Up</button>
             <p class="footer">
