--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
                 <h4>Login here using your username and paasword</h4>
             </header>
             <div class="login">
+                <span class="material-symbols-outlined">
+person
+</span>
                 <input type="text" placeholder="username" required>
             </div>
             <div class="login">
